upd: form with emojis

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@ https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
